// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Migrations migrates transform out to core transforms 1`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "seriesToColumns",
      "options": {
        "reducers": [],
      },
    },
  ],
}
`;

exports[`Table Migrations migrates transform out to core transforms 2`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "seriesToRows",
      "options": {
        "reducers": [],
      },
    },
  ],
}
`;

exports[`Table Migrations migrates transform out to core transforms 3`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "reduce",
      "options": {
        "includeTimeField": false,
        "reducers": [
          "mean",
          "max",
          "lastNotNull",
        ],
      },
    },
  ],
}
`;

exports[`Table Migrations migrates transform out to core transforms 4`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {},
    },
    "overrides": [],
  },
  "transformations": [
    {
      "id": "merge",
      "options": {
        "reducers": [],
      },
    },
  ],
}
`;
